obj-i686-pc-linux-gnu/dom/bindings/parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Unused terminals:

    WHITESPACE

Grammar

Rule 0     S' -> Definitions
Rule 1     Definitions -> ExtendedAttributeList Definition Definitions
Rule 2     Definitions -> <empty>
Rule 3     Definition -> CallbackOrInterface
Rule 4     Definition -> PartialInterface
Rule 5     Definition -> Dictionary
Rule 6     Definition -> Exception
Rule 7     Definition -> Enum
Rule 8     Definition -> Typedef
Rule 9     Definition -> ImplementsStatement
Rule 10    CallbackOrInterface -> CALLBACK CallbackRestOrInterface
Rule 11    CallbackOrInterface -> Interface
Rule 12    CallbackRestOrInterface -> CallbackRest
Rule 13    CallbackRestOrInterface -> Interface
Rule 14    Interface -> INTERFACE IDENTIFIER Inheritance LBRACE InterfaceMembers RBRACE SEMICOLON
Rule 15    Interface -> INTERFACE IDENTIFIER SEMICOLON
Rule 16    PartialInterface -> PARTIAL INTERFACE IDENTIFIER LBRACE InterfaceMembers RBRACE SEMICOLON
Rule 17    Inheritance -> COLON ScopedName
Rule 18    Inheritance -> <empty>
Rule 19    InterfaceMembers -> ExtendedAttributeList InterfaceMember InterfaceMembers
Rule 20    InterfaceMembers -> <empty>
Rule 21    InterfaceMember -> Const
Rule 22    InterfaceMember -> AttributeOrOperation
Rule 23    Dictionary -> DICTIONARY IDENTIFIER Inheritance LBRACE DictionaryMembers RBRACE SEMICOLON
Rule 24    DictionaryMembers -> ExtendedAttributeList DictionaryMember DictionaryMembers
Rule 25    DictionaryMembers -> <empty>
Rule 26    DictionaryMember -> Type IDENTIFIER DefaultValue SEMICOLON
Rule 27    DefaultValue -> EQUALS ConstValue
Rule 28    DefaultValue -> <empty>
Rule 29    Exception -> EXCEPTION IDENTIFIER Inheritance LBRACE ExceptionMembers RBRACE SEMICOLON
Rule 30    Enum -> ENUM IDENTIFIER LBRACE EnumValueList RBRACE SEMICOLON
Rule 31    EnumValueList -> STRING EnumValues
Rule 32    EnumValues -> COMMA STRING EnumValues
Rule 33    EnumValues -> <empty>
Rule 34    CallbackRest -> IDENTIFIER EQUALS ReturnType LPAREN ArgumentList RPAREN SEMICOLON
Rule 35    ExceptionMembers -> ExtendedAttributeList ExceptionMember ExceptionMembers
Rule 36    ExceptionMembers -> <empty>
Rule 37    Typedef -> TYPEDEF Type IDENTIFIER SEMICOLON
Rule 38    ImplementsStatement -> ScopedName IMPLEMENTS ScopedName SEMICOLON
Rule 39    Const -> CONST ConstType IDENTIFIER EQUALS ConstValue SEMICOLON
Rule 40    ConstValue -> BooleanLiteral
Rule 41    ConstValue -> INTEGER
Rule 42    ConstValue -> FLOATLITERAL
Rule 43    ConstValue -> STRING
Rule 44    ConstValue -> NULL
Rule 45    BooleanLiteral -> TRUE
Rule 46    BooleanLiteral -> FALSE
Rule 47    AttributeOrOperation -> Attribute
Rule 48    AttributeOrOperation -> Operation
Rule 49    Attribute -> Qualifier AttributeRest
Rule 50    Attribute -> Inherit AttributeRest
Rule 51    AttributeRest -> ReadOnly ATTRIBUTE Type IDENTIFIER SEMICOLON
Rule 52    ReadOnly -> READONLY
Rule 53    ReadOnly -> <empty>
Rule 54    Inherit -> INHERIT
Rule 55    Inherit -> <empty>
Rule 56    Operation -> Qualifiers OperationRest
Rule 57    Operation -> STRINGIFIER SEMICOLON
Rule 58    Qualifier -> STATIC
Rule 59    Qualifier -> STRINGIFIER
Rule 60    Qualifiers -> Qualifier
Rule 61    Qualifiers -> Specials
Rule 62    Specials -> Special Specials
Rule 63    Specials -> <empty>
Rule 64    Special -> GETTER
Rule 65    Special -> SETTER
Rule 66    Special -> CREATOR
Rule 67    Special -> DELETER
Rule 68    Special -> LEGACYCALLER
Rule 69    OperationRest -> ReturnType OptionalIdentifier LPAREN ArgumentList RPAREN SEMICOLON
Rule 70    OptionalIdentifier -> IDENTIFIER
Rule 71    OptionalIdentifier -> <empty>
Rule 72    ArgumentList -> Argument Arguments
Rule 73    ArgumentList -> <empty>
Rule 74    Arguments -> COMMA Argument Arguments
Rule 75    Arguments -> <empty>
Rule 76    Argument -> ExtendedAttributeList Optional Type Ellipsis ArgumentName DefaultValue
Rule 77    ArgumentName -> IDENTIFIER
Rule 78    ArgumentName -> ATTRIBUTE
Rule 79    ArgumentName -> CALLBACK
Rule 80    ArgumentName -> CONST
Rule 81    ArgumentName -> CREATOR
Rule 82    ArgumentName -> DELETER
Rule 83    ArgumentName -> DICTIONARY
Rule 84    ArgumentName -> ENUM
Rule 85    ArgumentName -> EXCEPTION
Rule 86    ArgumentName -> GETTER
Rule 87    ArgumentName -> IMPLEMENTS
Rule 88    ArgumentName -> INHERIT
Rule 89    ArgumentName -> INTERFACE
Rule 90    ArgumentName -> LEGACYCALLER
Rule 91    ArgumentName -> PARTIAL
Rule 92    ArgumentName -> SERIALIZER
Rule 93    ArgumentName -> SETTER
Rule 94    ArgumentName -> STATIC
Rule 95    ArgumentName -> STRINGIFIER
Rule 96    ArgumentName -> TYPEDEF
Rule 97    ArgumentName -> UNRESTRICTED
Rule 98    Optional -> OPTIONAL
Rule 99    Optional -> <empty>
Rule 100   Ellipsis -> ELLIPSIS
Rule 101   Ellipsis -> <empty>
Rule 102   ExceptionMember -> Const
Rule 103   ExceptionMember -> ExceptionField
Rule 104   ExceptionField -> Type IDENTIFIER SEMICOLON
Rule 105   ExtendedAttributeList -> LBRACKET ExtendedAttribute ExtendedAttributes RBRACKET
Rule 106   ExtendedAttributeList -> <empty>
Rule 107   ExtendedAttribute -> ExtendedAttributeNoArgs
Rule 108   ExtendedAttribute -> ExtendedAttributeArgList
Rule 109   ExtendedAttribute -> ExtendedAttributeIdent
Rule 110   ExtendedAttribute -> ExtendedAttributeNamedArgList
Rule 111   ExtendedAttribute -> <empty>
Rule 112   ExtendedAttributes -> COMMA ExtendedAttribute ExtendedAttributes
Rule 113   ExtendedAttributes -> <empty>
Rule 114   Other -> INTEGER
Rule 115   Other -> FLOATLITERAL
Rule 116   Other -> IDENTIFIER
Rule 117   Other -> STRING
Rule 118   Other -> OTHER
Rule 119   Other -> ELLIPSIS
Rule 120   Other -> COLON
Rule 121   Other -> SCOPE
Rule 122   Other -> SEMICOLON
Rule 123   Other -> LT
Rule 124   Other -> EQUALS
Rule 125   Other -> GT
Rule 126   Other -> QUESTIONMARK
Rule 127   Other -> DATE
Rule 128   Other -> DOMSTRING
Rule 129   Other -> ANY
Rule 130   Other -> ATTRIBUTE
Rule 131   Other -> BOOLEAN
Rule 132   Other -> BYTE
Rule 133   Other -> LEGACYCALLER
Rule 134   Other -> CONST
Rule 135   Other -> CREATOR
Rule 136   Other -> DELETER
Rule 137   Other -> DOUBLE
Rule 138   Other -> EXCEPTION
Rule 139   Other -> FALSE
Rule 140   Other -> FLOAT
Rule 141   Other -> GETTER
Rule 142   Other -> IMPLEMENTS
Rule 143   Other -> INHERIT
Rule 144   Other -> INTERFACE
Rule 145   Other -> LONG
Rule 146   Other -> MODULE
Rule 147   Other -> NULL
Rule 148   Other -> OBJECT
Rule 149   Other -> OCTET
Rule 150   Other -> OPTIONAL
Rule 151   Other -> SEQUENCE
Rule 152   Other -> SETTER
Rule 153   Other -> SHORT
Rule 154   Other -> STATIC
Rule 155   Other -> STRINGIFIER
Rule 156   Other -> TRUE
Rule 157   Other -> TYPEDEF
Rule 158   Other -> UNSIGNED
Rule 159   Other -> VOID
Rule 160   OtherOrComma -> Other
Rule 161   OtherOrComma -> COMMA
Rule 162   Type -> SingleType
Rule 163   Type -> UnionType TypeSuffix
Rule 164   SingleType -> NonAnyType
Rule 165   SingleType -> ANY TypeSuffixStartingWithArray
Rule 166   UnionType -> LPAREN UnionMemberType OR UnionMemberType UnionMemberTypes RPAREN
Rule 167   UnionMemberType -> NonAnyType
Rule 168   UnionMemberTypeArrayOfAny -> ANY LBRACKET RBRACKET
Rule 169   UnionMemberType -> UnionType TypeSuffix
Rule 170   UnionMemberType -> UnionMemberTypeArrayOfAny TypeSuffix
Rule 171   UnionMemberTypes -> OR UnionMemberType UnionMemberTypes
Rule 172   UnionMemberTypes -> <empty>
Rule 173   NonAnyType -> PrimitiveOrStringType TypeSuffix
Rule 174   NonAnyType -> ARRAYBUFFER TypeSuffix
Rule 175   NonAnyType -> OBJECT TypeSuffix
Rule 176   NonAnyType -> SEQUENCE LT Type GT Null
Rule 177   NonAnyType -> ScopedName TypeSuffix
Rule 178   NonAnyType -> DATE TypeSuffix
Rule 179   ConstType -> PrimitiveOrStringType Null
Rule 180   ConstType -> IDENTIFIER Null
Rule 181   PrimitiveOrStringType -> UnsignedIntegerType
Rule 182   PrimitiveOrStringType -> BOOLEAN
Rule 183   PrimitiveOrStringType -> BYTE
Rule 184   PrimitiveOrStringType -> OCTET
Rule 185   PrimitiveOrStringType -> FLOAT
Rule 186   PrimitiveOrStringType -> UNRESTRICTED FLOAT
Rule 187   PrimitiveOrStringType -> DOUBLE
Rule 188   PrimitiveOrStringType -> UNRESTRICTED DOUBLE
Rule 189   PrimitiveOrStringType -> DOMSTRING
Rule 190   UnsignedIntegerType -> UNSIGNED IntegerType
Rule 191   UnsignedIntegerType -> IntegerType
Rule 192   IntegerType -> SHORT
Rule 193   IntegerType -> LONG OptionalLong
Rule 194   OptionalLong -> LONG
Rule 195   OptionalLong -> <empty>
Rule 196   TypeSuffix -> LBRACKET RBRACKET TypeSuffix
Rule 197   TypeSuffix -> QUESTIONMARK TypeSuffixStartingWithArray
Rule 198   TypeSuffix -> <empty>
Rule 199   TypeSuffixStartingWithArray -> LBRACKET RBRACKET TypeSuffix
Rule 200   TypeSuffixStartingWithArray -> <empty>
Rule 201   Null -> QUESTIONMARK
Rule 202   Null -> <empty>
Rule 203   ReturnType -> Type
Rule 204   ReturnType -> VOID
Rule 205   ScopedName -> AbsoluteScopedName
Rule 206   ScopedName -> RelativeScopedName
Rule 207   AbsoluteScopedName -> SCOPE IDENTIFIER ScopedNameParts
Rule 208   RelativeScopedName -> IDENTIFIER ScopedNameParts
Rule 209   ScopedNameParts -> SCOPE IDENTIFIER ScopedNameParts
Rule 210   ScopedNameParts -> <empty>
Rule 211   ExtendedAttributeNoArgs -> IDENTIFIER
Rule 212   ExtendedAttributeArgList -> IDENTIFIER LPAREN ArgumentList RPAREN
Rule 213   ExtendedAttributeIdent -> IDENTIFIER EQUALS STRING
Rule 214   ExtendedAttributeIdent -> IDENTIFIER EQUALS IDENTIFIER
Rule 215   ExtendedAttributeNamedArgList -> IDENTIFIER EQUALS IDENTIFIER LPAREN ArgumentList RPAREN

Terminals, with rules where they appear

ANY                  : 129 165 168
ARRAYBUFFER          : 174
ATTRIBUTE            : 51 78 130
BOOLEAN              : 131 182
BYTE                 : 132 183
CALLBACK             : 10 79
COLON                : 17 120
COMMA                : 32 74 112 161
CONST                : 39 80 134
CREATOR              : 66 81 135
DATE                 : 127 178
DELETER              : 67 82 136
DICTIONARY           : 23 83
DOMSTRING            : 128 189
DOUBLE               : 137 187 188
ELLIPSIS             : 100 119
ENUM                 : 30 84
EQUALS               : 27 34 39 124 213 214 215
EXCEPTION            : 29 85 138
FALSE                : 46 139
FLOAT                : 140 185 186
FLOATLITERAL         : 42 115
GETTER               : 64 86 141
GT                   : 125 176
IDENTIFIER           : 14 15 16 23 26 29 30 34 37 39 51 70 77 104 116 180 207 208 209 211 212 213 214 214 215 215
IMPLEMENTS           : 38 87 142
INHERIT              : 54 88 143
INTEGER              : 41 114
INTERFACE            : 14 15 16 89 144
LBRACE               : 14 16 23 29 30
LBRACKET             : 105 168 196 199
LEGACYCALLER         : 68 90 133
LONG                 : 145 193 194
LPAREN               : 34 69 166 212 215
LT                   : 123 176
MODULE               : 146
NULL                 : 44 147
OBJECT               : 148 175
OCTET                : 149 184
OPTIONAL             : 98 150
OR                   : 166 171
OTHER                : 118
PARTIAL              : 16 91
QUESTIONMARK         : 126 197 201
RBRACE               : 14 16 23 29 30
RBRACKET             : 105 168 196 199
READONLY             : 52
RPAREN               : 34 69 166 212 215
SCOPE                : 121 207 209
SEMICOLON            : 14 15 16 23 26 29 30 34 37 38 39 51 57 69 104 122
SEQUENCE             : 151 176
SERIALIZER           : 92
SETTER               : 65 93 152
SHORT                : 153 192
STATIC               : 58 94 154
STRING               : 31 32 43 117 213
STRINGIFIER          : 57 59 95 155
TRUE                 : 45 156
TYPEDEF              : 37 96 157
UNRESTRICTED         : 97 186 188
UNSIGNED             : 158 190
VOID                 : 159 204
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

AbsoluteScopedName   : 205
Argument             : 72 74
ArgumentList         : 34 69 212 215
ArgumentName         : 76
Arguments            : 72 74
Attribute            : 47
AttributeOrOperation : 22
AttributeRest        : 49 50
BooleanLiteral       : 40
CallbackOrInterface  : 3
CallbackRest         : 12
CallbackRestOrInterface : 10
Const                : 21 102
ConstType            : 39
ConstValue           : 27 39
DefaultValue         : 26 76
Definition           : 1
Definitions          : 1 0
Dictionary           : 5
DictionaryMember     : 24
DictionaryMembers    : 23 24
Ellipsis             : 76
Enum                 : 7
EnumValueList        : 30
EnumValues           : 31 32
Exception            : 6
ExceptionField       : 103
ExceptionMember      : 35
ExceptionMembers     : 29 35
ExtendedAttribute    : 105 112
ExtendedAttributeArgList : 108
ExtendedAttributeIdent : 109
ExtendedAttributeList : 1 19 24 35 76
ExtendedAttributeNamedArgList : 110
ExtendedAttributeNoArgs : 107
ExtendedAttributes   : 105 112
ImplementsStatement  : 9
Inherit              : 50
Inheritance          : 14 23 29
IntegerType          : 190 191
Interface            : 11 13
InterfaceMember      : 19
InterfaceMembers     : 14 16 19
NonAnyType           : 164 167
Null                 : 176 179 180
Operation            : 48
OperationRest        : 56
Optional             : 76
OptionalIdentifier   : 69
OptionalLong         : 193
Other                : 160
OtherOrComma         : 
PartialInterface     : 4
PrimitiveOrStringType : 173 179
Qualifier            : 49 60
Qualifiers           : 56
ReadOnly             : 51
RelativeScopedName   : 206
ReturnType           : 34 69
ScopedName           : 17 38 38 177
ScopedNameParts      : 207 208 209
SingleType           : 162
Special              : 62
Specials             : 61 62
Type                 : 26 37 51 76 104 176 203
TypeSuffix           : 163 169 170 173 174 175 177 178 196 199
TypeSuffixStartingWithArray : 165 197
Typedef              : 8
UnionMemberType      : 166 166 171
UnionMemberTypeArrayOfAny : 170
UnionMemberTypes     : 166 171
UnionType            : 163 169
UnsignedIntegerType  : 181

Parsing method: LALR

state 0

    (0) S' -> . Definitions
    (1) Definitions -> . ExtendedAttributeList Definition Definitions
    (2) Definitions -> .
    (105) ExtendedAttributeList -> . LBRACKET ExtendedAttribute ExtendedAttributes RBRACKET
    (106) ExtendedAttributeList -> .

    $end            reduce using rule 2 (Definitions -> .)
    LBRACKET        shift and go to state 1
    CALLBACK        reduce using rule 106 (ExtendedAttributeList -> .)
    PARTIAL         reduce using rule 106 (ExtendedAttributeList -> .)
    DICTIONARY      reduce using rule 106 (ExtendedAttributeList -> .)
    EXCEPTION       reduce using rule 106 (ExtendedAttributeList -> .)
    ENUM            reduce using rule 106 (ExtendedAttributeList -> .)
    TYPEDEF         reduce using rule 106 (ExtendedAttributeList -> .)
    INTERFACE       reduce using rule 106 (ExtendedAttributeList -> .)
    SCOPE           reduce using rule 106 (ExtendedAttributeList -> .)
    IDENTIFIER      reduce using rule 106 (ExtendedAttributeList -> .)

    Definitions                    shift and go to state 3
    ExtendedAttributeList          shift and go to state 2

state 1

    (105) ExtendedAttributeList -> LBRACKET . ExtendedAttribute ExtendedAttributes RBRACKET
    (107) ExtendedAttribute -> . ExtendedAttributeNoArgs
    (108) ExtendedAttribute -> . ExtendedAttributeArgList
    (109) ExtendedAttribute -> . ExtendedAttributeIdent
    (110) ExtendedAttribute -> . ExtendedAttributeNamedArgList
    (111) ExtendedAttribute -> .
    (211) ExtendedAttributeNoArgs -> . IDENTIFIER
    (212) ExtendedAttributeArgList -> . IDENTIFIER LPAREN ArgumentList RPAREN
    (213) ExtendedAttributeIdent -> . IDENTIFIER EQUALS STRING
    (214) ExtendedAttributeIdent -> . IDENTIFIER EQUALS IDENTIFIER
    (215) ExtendedAttributeNamedArgList -> . IDENTIFIER EQUALS IDENTIFIER LPAREN ArgumentList RPAREN

    COMMA           reduce using rule 111 (ExtendedAttribute -> .)
    RBRACKET        reduce using rule 111 (ExtendedAttribute -> .)
    IDENTIFIER      shift and go to state 9

    ExtendedAttribute              shift and go to state 4
    ExtendedAttributeNamedArgList  shift and go to state 5
    ExtendedAttributeArgList       shift and go to state 6
    ExtendedAttributeIdent         shift and go to state 7
    ExtendedAttributeNoArgs        shift and go to state 8

state 2

    (1) Definitions -> ExtendedAttributeList . Definition Definitions
    (3) Definition -> . CallbackOrInterface
    (4) Definition -> . PartialInterface
    (5) Definition -> . Dictionary
    (6) Definition -> . Exception
    (7) Definition -> . Enum
    (8) Definition -> . Typedef
    (9) Definition -> . ImplementsStatement
    (10) CallbackOrInterface -> . CALLBACK CallbackRestOrInterface
    (11) CallbackOrInterface -> . Interface
    (16) PartialInterface -> . PARTIAL INTERFACE IDENTIFIER LBRACE InterfaceMembers RBRACE SEMICOLON
    (23) Dictionary -> . DICTIONARY IDENTIFIER Inheritance LBRACE DictionaryMembers RBRACE SEMICOLON
    (29) Exception -> . EXCEPTION IDENTIFIER Inheritance LBRACE ExceptionMembers RBRACE SEMICOLON
    (30) Enum -> . ENUM IDENTIFIER LBRACE EnumValueList RBRACE SEMICOLON
    (37) Typedef -> . TYPEDEF Type IDENTIFIER SEMICOLON
    (38) ImplementsStatement -> . ScopedName IMPLEMENTS ScopedName SEMICOLON
    (14) Interface -> . INTERFACE IDENTIFIER Inheritance LBRACE InterfaceMembers RBRACE SEMICOLON
    (15) Interface -> . INTERFACE IDENTIFIER SEMICOLON
    (205) ScopedName -> . AbsoluteScopedName
    (206) ScopedName -> . RelativeScopedName
    (207) AbsoluteScopedName -> . SCOPE IDENTIFIER ScopedNameParts
    (208) RelativeScopedName -> . IDENTIFIER ScopedNameParts

    CALLBACK        shift and go to state 28
    PARTIAL         shift and go to state 26
    DICTIONARY      shift and go to state 20
    EXCEPTION       shift and go to state 22
    ENUM            shift and go to state 21
    TYPEDEF         shift and go to state 25
    INTERFACE       shift and go to state 29
    SCOPE           shift and go to state 12
    IDENTIFIER      shift and go to state 17

    Typedef                        shift and go to state 10
    CallbackOrInterface            shift and go to state 11
    Dictionary                     shift and go to state 13
    AbsoluteScopedName             shift and go to state 14
    Enum                           shift and go to state 15
    Interface                      shift and go to state 16
    Definition                     shift and go to state 18
    Exception                      shift and go to state 19
    PartialInterface               shift and go to state 23
    ImplementsStatement            shift and go to state 24
    RelativeScopedName             shift and go to state 27
    ScopedName                     shift and go to state 30

state 3

    (0) S' -> Definitions .



state 4

    (105) ExtendedAttributeList -> LBRACKET ExtendedAttribute . ExtendedAttributes RBRACKET
    (112) ExtendedAttributes -> . COMMA ExtendedAttribute ExtendedAttributes
    (113) ExtendedAttributes -> .

    COMMA           shift and go to state 32
    RBRACKET        reduce using rule 113 (ExtendedAttributes -> .)

    ExtendedAttributes             shift and go to state 31

state 5

    (110) ExtendedAttribute -> ExtendedAttributeNamedArgList .

    COMMA           reduce using rule 110 (ExtendedAttribute -> ExtendedAttributeNamedArgList .)
    RBRACKET        reduce using rule 110 (ExtendedAttribute -> ExtendedAttributeNamedArgList .)


state 6

    (108) ExtendedAttribute -> ExtendedAttributeArgList .

    COMMA           reduce using rule 108 (ExtendedAttribute -> ExtendedAttributeArgList .)
    RBRACKET        reduce using rule 108 (ExtendedAttribute -> ExtendedAttributeArgList .)


state 7

    (109) ExtendedAttribute -> ExtendedAttributeIdent .

    COMMA           reduce using rule 109 (ExtendedAttribute -> ExtendedAttributeIdent .)
    RBRACKET        reduce using rule 109 (ExtendedAttribute -> ExtendedAttributeIdent .)


state 8

    (107) ExtendedAttribute -> ExtendedAttributeNoArgs .

    COMMA           reduce using rule 107 (ExtendedAttribute -> ExtendedAttributeNoArgs .)
    RBRACKET        reduce using rule 107 (ExtendedAttribute -> ExtendedAttributeNoArgs .)


state 9

    (211) ExtendedAttributeNoArgs -> IDENTIFIER .
    (212) ExtendedAttributeArgList -> IDENTIFIER . LPAREN ArgumentList RPAREN
    (213) ExtendedAttributeIdent -> IDENTIFIER . EQUALS STRING
    (214) ExtendedAttributeIdent -> IDENTIFIER . EQUALS IDENTIFIER
    (215) ExtendedAttributeNamedArgList -> IDENTIFIER . EQUALS IDENTIFIER LPAREN ArgumentList RPAREN

    COMMA           reduce using rule 211 (ExtendedAttributeNoArgs -> IDENTIFIER .)
    RBRACKET        reduce using rule 211 (ExtendedAttributeNoArgs -> IDENTIFIER .)
    LPAREN          shift and go to state 34
    EQUALS          shift and go to state 33


state 10

    (8) Definition -> Typedef .

    LBRACKET        reduce using rule 8 (Definition -> Typedef .)
    CALLBACK        reduce using rule 8 (Definition -> Typedef .)
    PARTIAL         reduce using rule 8 (Definition -> Typedef .)
    DICTIONARY      reduce using rule 8 (Definition -> Typedef .)
    EXCEPTION       reduce using rule 8 (Definition -> Typedef .)
    ENUM            reduce using rule 8 (Definition -> Typedef .)
    TYPEDEF         reduce using rule 8 (Definition -> Typedef .)
    INTERFACE       reduce using rule 8 (Definition -> Typedef .)
    SCOPE           reduce using rule 8 (Definition -> Typedef .)
    IDENTIFIER      reduce using rule 8 (Definition -> Typedef .)
    $end            reduce using rule 8 (Definition -> Typedef .)


state 11

    (3) Definition -> CallbackOrInterface .

    LBRACKET        reduce using rule 3 (Definition -> CallbackOrInterface .)
    CALLBACK        reduce using rule 3 (Definition -> CallbackOrInterface .)
    PARTIAL         reduce using rule 3 (Definition -> CallbackOrInterface .)
    DICTIONARY      reduce using rule 3 (Definition -> CallbackOrInterface .)
    EXCEPTION       reduce using rule 3 (Definition -> CallbackOrInterface .)
    ENUM            reduce using rule 3 (Definition -> CallbackOrInterface .)
    TYPEDEF         reduce using rule 3 (Definition -> CallbackOrInterface .)
    INTERFACE       reduce using rule 3 (Definition -> CallbackOrInterface .)
    SCOPE           reduce using rule 3 (Definition -> CallbackOrInterface .)
    IDENTIFIER      reduce using rule 3 (Definition -> CallbackOrInterface .)
    $end            reduce using rule 3 (Definition -> CallbackOrInterface .)


state 12

    (207) AbsoluteScopedName -> SCOPE . IDENTIFIER ScopedNameParts

    IDENTIFIER      shift and go to state 35


state 13

    (5) Definition -> Dictionary .

    LBRACKET        reduce using rule 5 (Definition -> Dictionary .)
    CALLBACK        reduce using rule 5 (Definition -> Dictionary .)
    PARTIAL         reduce using rule 5 (Definition -> Dictionary .)
    DICTIONARY      reduce using rule 5 (Definition -> Dictionary .)
    EXCEPTION       reduce using rule 5 (Definition -> Dictionary .)
    ENUM            reduce using rule 5 (Definition -> Dictionary .)
    TYPEDEF         reduce using rule 5 (Definition -> Dictionary .)
    INTERFACE       reduce using rule 5 (Definition -> Dictionary .)
    SCOPE           reduce using rule 5 (Definition -> Dictionary .)
    IDENTIFIER      reduce using rule 5 (Definition -> Dictionary .)
    $end            reduce using rule 5 (Definition -> Dictionary .)


state 14

    (205) ScopedName -> AbsoluteScopedName .

    LBRACKET        reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    QUESTIONMARK    reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    IDENTIFIER      reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    SEMICOLON       reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    IMPLEMENTS      reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    LBRACE          reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    OR              reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    RPAREN          reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    ELLIPSIS        reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    ATTRIBUTE       reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    CALLBACK        reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    CONST           reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    CREATOR         reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    DELETER         reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    DICTIONARY      reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    ENUM            reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    EXCEPTION       reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    GETTER          reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    INHERIT         reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    INTERFACE       reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    LEGACYCALLER    reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    PARTIAL         reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    SERIALIZER      reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    SETTER          reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    STATIC          reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    STRINGIFIER     reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    TYPEDEF         reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    UNRESTRICTED    reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    GT              reduce using rule 205 (ScopedName -> AbsoluteScopedName .)
    LPAREN          reduce using rule 205 (ScopedName -> AbsoluteScopedName .)


state 15

    (7) Definition -> Enum .

    LBRACKET        reduce using rule 7 (Definition -> Enum .)
    CALLBACK        reduce using rule 7 (Definition -> Enum .)
    PARTIAL         reduce using rule 7 (Definition -> Enum .)
    DICTIONARY      reduce using rule 7 (Definition -> Enum .)
    EXCEPTION       reduce using rule 7 (Definition -> Enum .)
    ENUM            reduce using rule 7 (Definition -> Enum .)
    TYPEDEF         reduce using rule 7 (Definition -> Enum .)
    INTERFACE       reduce using rule 7 (Definition -> Enum .)
    SCOPE           reduce using rule 7 (Definition -> Enum .)
    IDENTIFIER      reduce using rule 7 (Definition -> Enum .)
    $end            reduce using rule 7 (Definition -> Enum .)


state 16

    (11) CallbackOrInterface -> Interface .

    LBRACKET        reduce using rule 11 (CallbackOrInterface -> Interface .)
    CALLBACK        reduce using rule 11 (CallbackOrInterface -> Interface .)
    PARTIAL         reduce using rule 11 (CallbackOrInterface -> Interface .)
    DICTIONARY      reduce using rule 11 (CallbackOrInterface -> Interface .)
    EXCEPTION       reduce using rule 11 (CallbackOrInterface -> Interface .)
    ENUM            reduce using rule 11 (CallbackOrInterface -> Interface .)
    TYPEDEF         reduce using rule 11 (CallbackOrInterface -> Interface .)
    INTERFACE       reduce using rule 11 (CallbackOrInterface -> Interface .)
    SCOPE           reduce using rule 11 (CallbackOrInterface -> Interface .)
    IDENTIFIER      reduce using rule 11 (CallbackOrInterface -> Interface .)
    $end            reduce using rule 11 (CallbackOrInterface -> Interface .)


state 17

    (208) RelativeScopedName -> IDENTIFIER . ScopedNameParts
    (209) ScopedNameParts -> . SCOPE IDENTIFIER ScopedNameParts
    (210) ScopedNameParts -> .

    SCOPE           shift and go to state 36
    IMPLEMENTS      reduce using rule 210 (ScopedNameParts -> .)
    LBRACKET        reduce using rule 210 (ScopedNameParts -> .)
    QUESTIONMARK    reduce using rule 210 (ScopedNameParts -> .)
    IDENTIFIER      reduce using rule 210 (ScopedNameParts -> .)
    OR              reduce using rule 210 (ScopedNameParts -> .)
    SEMICOLON       reduce using rule 210 (ScopedNameParts -> .)
    LBRACE          reduce using rule 210 (ScopedNameParts -> .)
    GT              reduce using rule 210 (ScopedNameParts -> .)
    LPAREN          reduce using rule 210 (ScopedNameParts -> .)
    ELLIPSIS        reduce using rule 210 (ScopedNameParts -> .)
    ATTRIBUTE       reduce using rule 210 (ScopedNameParts -> .)
    CALLBACK        reduce using rule 210 (ScopedNameParts -> .)
    CONST           reduce using rule 210 (ScopedNameParts -> .)
    CREATOR         reduce using rule 210 (ScopedNameParts -> .)
    DELETER         reduce using rule 210 (ScopedNameParts -> .)
    DICTIONARY      reduce using rule 210 (ScopedNameParts -> .)
    ENUM            reduce using rule 210 (ScopedNameParts -> .)
    EXCEPTION       reduce using rule 210 (ScopedNameParts -> .)
    GETTER          reduce using rule 210 (ScopedNameParts -> .)
    INHERIT         reduce using rule 210 (ScopedNameParts -> .)
    INTERFACE       reduce using rule 210 (ScopedNameParts -> .)
    LEGACYCALLER    reduce using rule 210 (ScopedNameParts -> .)
    PARTIAL         reduce using rule 210 (ScopedNameParts -> .)
    SERIALIZER      reduce using rule 210 (ScopedNameParts -> .)
    SETTER          reduce using rule 210 (ScopedNameParts -> .)
    STATIC          reduce using rule 210 (ScopedNameParts -> .)
    STRINGIFIER     reduce using rule 210 (ScopedNameParts -> .)
    TYPEDEF         reduce using rule 210 (ScopedNameParts -> .)
    UNRESTRICTED    reduce using rule 210 (ScopedNameParts -> .)
    RPAREN          reduce using rule 210 (ScopedNameParts -> .)

    ScopedNameParts                shift and go to state 37

state 18

    (1) Definitions -> ExtendedAttributeList Definition . Definitions
    (1) Definitions -> . ExtendedAttributeList Definition Definitions
    (2) Definitions -> .
    (105) ExtendedAttributeList -> . LBRACKET ExtendedAttribute ExtendedAttributes RBRACKET
    (106) ExtendedAttributeList -> .
